# studytool

./: .flake  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
studytool/: ebook.py  link.py  main.py  num_to_image_path.py  pdf2text.py  pdf_merge.py  slides2md.py  trad_to_simp.py  youtube.py  youtube_playlist.py
