[tool.poetry]
name = "studytool"
version = "0.1.4"
description = "Command lines for study"
authors = ["Sihan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.3"
rich = "^13.6.0"
typer = "^0.9.0"
tqdm = "^4.66.1"
youtube-dl = "^2021.12.17"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
studytool = "studytool.main:app"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
